add sort and search

--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -1,6 +1,6 @@
 .myBtn {
   background-color: yellow;
-  border: 1px solid gold;
+  border: 1px solid blue;
   padding: 10px 15px;
   font-weight: 600;
   font-size: 14px;
