--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -1,5 +1,6 @@
 .myInput {
-  border: 1px solid blue;
+  background-color: dodgerblue;
+  border: 2px solid gold;
   padding: 10px 15px;
   font-size: 14px;
   margin: 10px 0;
