--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,7 +16,8 @@
 
 .post {
   justify-content: space-between;
-  border: 2px solid blue;
+  background-color: dodgerblue;
+  border: 3px solid gold;
   align-items: center;
   margin-top: 15px;
   display: flex;
