--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,3 +38,19 @@
   transform: translateX(-350px);
   transition: all 500ms ease-in;
 }
+
+.pageWrapper {
+  margin-top: 30px;
+  display: flex;
+}
+
+.page {
+  border: solid 1px blue;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.pageCurrent {
+  border: 2px solid yellow;
+  font-weight: bold;
+}
