--- a/src/components/UI/loader/Loader.module.css
+++ b/src/components/UI/loader/Loader.module.css
@@ -1,9 +1,12 @@
 .loader {
   animation: rotate 1.5s infinite linear;
   border: 5px dashed blue;
+  justify-items: center;
   border-radius: 50%;
+  margin-top: 70px;
   height: 100px;
   width: 100px;
+  display: flex;
 }
 
 @keyframes rotate {
