--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,9 +5,11 @@
 }
 
 #root {
-  justify-content: center;
+  padding: 0 30px 30px 30px;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 70px;
   display: flex;
-  padding: 30px;
 }
 
 .App {
@@ -22,6 +24,15 @@
   margin-top: 15px;
   display: flex;
   padding: 15px;
+}
+
+.postTitle {
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.postBtn {
+  display: flex;
 }
 
 .post-enter {
@@ -53,4 +64,32 @@
 .pageCurrent {
   border: 2px solid yellow;
   font-weight: bold;
+}
+
+.navbar {
+  background: dodgerblue;
+  align-items: center;
+  padding-right: 30px;
+  padding-left: 30px;
+  position: fixed;
+  display: flex;
+  height: 50px;
+  width: 100vw;
+  right: 0;
+  left: 0;
+  top: 0;
+}
+
+.navbarLinks {
+  margin-left: auto;
+}
+
+.link {
+  text-decoration: none;
+  margin-right: 10px;
+  padding: 7px;
+}
+
+.link:hover {
+  color: gold;
 }
